# action

./: .gitlab-ci.yml  README.md  action.h
tests/: CMakeLists.txt  tests.cpp
